# gitnexus-wasm

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: deploy.yml
.implementation-plan/: INDEX.md  MASTER_PLAN.md  TASK_1_TOKENIZER.md  TASK_2_WEB_WORKERS.md  TASK_3_COMMUNITY_DETECTION.md  TASK_4_PROCESS_EXTRACTION.md  TASK_5_SEMANTIC_SEARCH.md  TASK_6_GIT_AUTH.md  TASK_7_INCREMENTAL_UPDATES.md
crates/gitnexus-core/: Cargo.toml
crates/gitnexus-core/src/: lib.rs
crates/gitnexus-embed/: Cargo.toml
crates/gitnexus-embed/src/: lib.rs
crates/gitnexus-git/: Cargo.toml
crates/gitnexus-git/src/: lib.rs
crates/gitnexus-graph/: Cargo.toml
crates/gitnexus-graph/src/: lib.rs  louvain.rs  process.rs  vector.rs
crates/gitnexus-parse/: Cargo.toml
crates/gitnexus-parse/src/: lib.rs
crates/gitnexus-shared/: Cargo.toml
crates/gitnexus-shared/src/: hash.rs  lib.rs
crates/gitnexus-tokenize/: Cargo.toml
crates/gitnexus-tokenize/src/: bpe.rs  lib.rs
mnt/user-data/outputs/: Cargo.toml
mnt/user-data/outputs/crates/gitnexus-tokenize/src/: lib.rs
scripts/: build-parsers.sh  quantize-model.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/assets/: tokenizer.json
web/public/workers/: parser-worker.js
web/src/: App.tsx  index.css  main.tsx
web/src/components/: ContextPanel.tsx  FileTree.tsx  GitAuthModal.tsx  GraphView.tsx  Header.tsx  ProgressModal.tsx  SearchPanel.tsx  WelcomeScreen.tsx
web/src/hooks/: useStore.ts
web/src/store/: useStore.ts
web/src/wasm/: bridge.ts  kuzu-loader.ts  onnx-loader.ts  persistence.ts  worker-pool.ts
