[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GitNexus Team"]
license = "MIT"

[workspace.dependencies]
gitnexus-shared = { path = "crates/gitnexus-shared" }
gitnexus-parse = { path = "crates/gitnexus-parse" }
gitnexus-graph = { path = "crates/gitnexus-graph" }
gitnexus-embed = { path = "crates/gitnexus-embed" }
gitnexus-git   = { path = "crates/gitnexus-git" }

wasm-bindgen          = "0.2.92"
wasm-bindgen-futures  = "0.4.42"
js-sys                = "0.3.69"
web-sys               = "0.3.69"
serde                 = { version = "1.0", features = ["derive"] }
serde_json            = "1.0"
serde-wasm-bindgen    = "0.6.5"
thiserror             = "1.0"
anyhow                = "1.0"
log                   = "0.4"
wasm-logger           = "0.1.1"
console_error_panic_hook = "0.1.7"
once_cell             = "1.19"
parking_lot           = "0.12"
getrandom             = { version = "0.2", features = ["js"] }
wasm-bindgen-test     = "0.3"
