[package]
name = "gitnexus-git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gitnexus-shared = { path = "../gitnexus-shared" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["console", "FileSystemDirectoryHandle", "FileSystemFileHandle", "FileSystemWritableFileStream", "StorageManager", "Window"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
