[package]
name = "gitnexus-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
serde-wasm-bindgen = { workspace = true }

[features]
default = []
