[package]
name = "gitnexus-tokenize"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen          = { workspace = true }
js-sys                = { workspace = true }
web-sys               = { workspace = true, features = ["console"] }
serde                 = { workspace = true }
serde_json            = { workspace = true }
serde-wasm-bindgen    = { workspace = true }
log                   = { workspace = true }
thiserror             = { workspace = true }

# We use a custom minimal BPE implemention to avoid `tokenizers` dependency bloat
# in WASM, but we can load standard HuggingFace `tokenizer.json` files.
