[workspace]
members = [
    "crates/gitnexus-shared",
    "crates/gitnexus-tokenize",
    "crates/gitnexus-parse",
    "crates/gitnexus-graph",
    "crates/gitnexus-embed",
    "crates/gitnexus-git",
    "crates/gitnexus-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GitNexus Contributors"]
license = "MIT"
repository = "https://github.com/abt0y/GitNexus"

[workspace.dependencies]
wasm-bindgen          = "0.2.92"
wasm-bindgen-futures  = "0.4.42"
js-sys                = "0.3.69"
web-sys               = "0.3.69"
serde                 = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen    = "0.6"
serde_json            = "1.0"
thiserror             = "1.0"
anyhow                = "1.0"
log                   = "0.4"
wasm-logger           = "0.2"
console_error_panic_hook = "0.1"
once_cell             = "1.19"
parking_lot           = { version = "0.12", features = ["wasm-bindgen"] }
